kubernetes/workloads/rook-ceph/manifests/overlays/fh/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ceph-dashboard-redirect
  namespace: rook-ceph
spec:
  parentRefs:
    - name: cilium-https-gateway
      namespace: cilium
  hostnames:
    - "ceph.fh.dronen.house"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
