kubernetes/workloads/rook-ceph/manifests/overlays/fh/tlsroute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: ceph-dashboard
  namespace: rook-ceph
spec:
  parentRefs:
    - name: cilium-https-gateway
      namespace: cilium
  hostnames:
    - "ceph.fh.dronen.house"
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          kind: Service
          port: 8443
